kubernetes/clusters/1276-prod/keycloak/keycloak/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    dns.kian.sh/provider: cloudflare
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: 9221faf4-41f8-4aa6-9cbc-1b757c2a2c07.cfargotunnel.com
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
  hostnames:
    - sso.techgarden.gg
  rules:
    - backendRefs:
        - name: keycloak-service
          port: 8080
